--- a/index.html
+++ b/index.html
@@ -463,24 +463,25 @@
         ];
 
         // --- BANCO DE DADOS CAPEX (BLOCO 3) ---
+        // Valores baseados na tabela image_e6839d.png
         const dadosCapex = [
             { id: 'c1', produto: "Flauta", qtdPorEscola: 112, vlrAquisicao: 62.00 },
-            { id: 'c2', produto: "Teclado", qtdPorEscola: 32, vlrAquisicao: (38400 / 32).toFixed(2) },
-            { id: 'c3', produto: "Violão", qtdPorEscola: 32, vlrAquisicao: (22400 / 32).toFixed(2) },
-            { id: 'c4', produto: "Uniforme (Balé)", qtdPorEscola: 60, vlrAquisicao: (6600 / 60).toFixed(2) },
-            { id: 'c5', produto: "Jogos de Tabuleiro", qtdPorEscola: 70, vlrAquisicao: (12600 / 70).toFixed(2) },
-            { id: 'c6', produto: "Bola de Voleibol", qtdPorEscola: 4, vlrAquisicao: (476 / 4).toFixed(2) },
-            { id: 'c7', produto: "Mesa (Tênis)", qtdPorEscola: 8, vlrAquisicao: (20000 / 8).toFixed(2) },
-            { id: 'c8', produto: "Kimono", qtdPorEscola: 336, vlrAquisicao: (48303 / 336).toFixed(2) },
-            { id: 'c9', produto: "Colchonetes", qtdPorEscola: 70, vlrAquisicao: (5355 / 70).toFixed(2) },
-            { id: 'c10', produto: "Raquete/tênis/bola/rede", qtdPorEscola: 8, vlrAquisicao: (2000 / 8).toFixed(2) },
-            { id: 'c11', produto: "Tatame", qtdPorEscola: 1, vlrAquisicao: (10200 / 1).toFixed(2) },
-            { id: 'c12', produto: "Maleta Robótica I", qtdPorEscola: 2, vlrAquisicao: (16800 / 2).toFixed(2) },
-            { id: 'c13', produto: "Maleta Torneio", qtdPorEscola: 1, vlrAquisicao: (11600 / 1).toFixed(2) },
-            { id: 'c14', produto: "Maleta Robótica II", qtdPorEscola: 3, vlrAquisicao: (38000 / 3).toFixed(2) },
-            { id: 'c15', produto: "Carrinho de Notebook", qtdPorEscola: 1, vlrAquisicao: (12000 / 1).toFixed(2) },
-            { id: 'c16', produto: "Notebook", qtdPorEscola: 21, vlrAquisicao: (406000 / 21).toFixed(2) },
-            { id: 'c17', produto: "Caixa de Som", qtdPorEscola: 2, vlrAquisicao: (4000 / 2).toFixed(2) }
+            { id: 'c2', produto: "Teclado", qtdPorEscola: 20, vlrAquisicao: 1200.00 },
+            { id: 'c3', produto: "Violão", qtdPorEscola: 20, vlrAquisicao: 1100.00 },
+            { id: 'c4', produto: "Uniforme (Balé)", qtdPorEscola: 70, vlrAquisicao: 160.00 },
+            { id: 'c5', produto: "Jogos de Tabuleiro", qtdPorEscola: 80, vlrAquisicao: 180.00 },
+            { id: 'c6', produto: "Bola de Voleibol", qtdPorEscola: 4, vlrAquisicao: 119.00 },
+            { id: 'c7', produto: "Mesa (Tênis)", qtdPorEscola: 8, vlrAquisicao: 2500.00 },
+            { id: 'c8', produto: "Kimono", qtdPorEscola: 336, vlrAquisicao: 210.00 },
+            { id: 'c9', produto: "Colchonetes", qtdPorEscola: 80, vlrAquisicao: 76.50 },
+            { id: 'c10', produto: "Raquete/tênis/bola/rede", qtdPorEscola: 8, vlrAquisicao: 250.00 },
+            { id: 'c11', produto: "Tatame", qtdPorEscola: 1, vlrAquisicao: 10200.00 },
+            { id: 'c12', produto: "Maleta Robótica I", qtdPorEscola: 8, vlrAquisicao: 2300.00 },
+            { id: 'c13', produto: "Maleta Torneio", qtdPorEscola: 2, vlrAquisicao: 6200.00 },
+            { id: 'c14', produto: "Maleta Robótica II", qtdPorEscola: 10, vlrAquisicao: 3900.00 },
+            { id: 'c15', produto: "Carrinho de Notebook", qtdPorEscola: 2, vlrAquisicao: 8000.00 },
+            { id: 'c16', produto: "Notebook", qtdPorEscola: 73, vlrAquisicao: 6200.00 },
+            { id: 'c17', produto: "Caixa de Som", qtdPorEscola: 2, vlrAquisicao: 2000.00 }
         ];
 
         // --- REFERÊNCIAS DO DOM - BLOCO 1 ---
