--- a/index.html
+++ b/index.html
@@ -556,7 +556,8 @@
             { id: 'c16', produto: "Notebook", qtdPorEscola: 73, vlrAquisicao: 6200.00 },
             { id: 'c17', produto: "Caixa de Som", qtdPorEscola: 2, vlrAquisicao: 2000.00 },
             { id: 'c18', produto: "Kit Artes Circenses", qtdPorEscola: 1, vlrAquisicao: 24800.00 },
-            { id: 'c19', produto: "Kit Robótica", qtdPorEscola: 1, vlrAquisicao: 39920.00 }
+            { id: 'c19', produto: "Kit Robótica", qtdPorEscola: 1, vlrAquisicao: 39920.00 },
+            { id: 'c20', produto: "Kit Dança Rítmica", qtdPorEscola: 1, vlrAquisicao: 41600.00 }
         ];
 
         // --- REFERÊNCIAS DO DOM - BLOCO 1 ---
