--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proposta Piloto SESI - 9 Escolas (Blocos 1-5)</title>
+    <title>Proposta Piloto SESI - 46 Escolas (Blocos 1-5)</title>
     <script src="https://cdn-tailwindcss.vercel.app/"></script>
     <!-- jsPDF Core -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -105,7 +105,7 @@
         <header class="border-b border-gray-200 pb-4 mb-6 flex items-center justify-between">
             <div>
                 <h1 class="text-1xl font-bold text-gray-700">Proposta de Parceria - Atividades Complementares (Tempo Integral)</h1>
-                <h2 class="text-lg font-semibold text-cyan-700">Versão Piloto - 9 Escolas</h2>
+                <h2 class="text-lg font-semibold text-cyan-700">Versão Piloto - 46 Escolas</h2>
             </div>
             <img src="https://i.postimg.cc/8CXccsTc/sseducacao.png" alt="Logomarca Seduc-GO" class="h-16 w-auto object-contain">
         </header>
@@ -117,7 +117,7 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
             <div class="border border-gray-200 rounded-lg p-6 bg-gray-50">
-                <h4 class="text-lg font-semibold text-gray-700 mb-4">Seleção de Unidades Educacionais (Piloto 9)</h4>
+                <h4 class="text-lg font-semibold text-gray-700 mb-4">Seleção de Unidades Educacionais (Piloto 46)</h4>
                 
                 <!-- Filtro e Botão de Limpar -->
                 <div class="flex items-center gap-2 mb-4">
@@ -486,17 +486,54 @@
 
     <script>
         // --- BANCO DE DADOS DAS ESCOLAS (BLOCO 1) ---
-        // ATUALIZADO PARA 9 ESCOLAS (PILOTO)
+        // Atualizado com a tabela completa de 46 escolas (image_06c7ff.png)
         const dadosEscolas = [
-            { id: 1, nome: "EM Cel José Viana", alunos: 336, turmas: 12 },
-            { id: 2, nome: "EM José Alves Vila Nova", alunos: 336, turmas: 12 },
-            { id: 3, nome: "EM Prof. Trajano de Sá Guimarães", alunos: 420, turmas: 12 },
-            { id: 4, nome: "EM Prof. Amélia Fernandes Martins", alunos: 336, turmas: 12 },
-            { id: 5, nome: "EM Prof. Cleonice Monteiro Wolney", alunos: 188, turmas: 8 },
-            { id: 6, nome: "EM João Clarimundo Oliveira", alunos: 200, turmas: 8 },
-            { id: 7, nome: "EM Grande Retiro", alunos: 336, turmas: 12 },
-            { id: 8, nome: "EM Dom Tomás Balduino", alunos: 336, turmas: 12 },
-            { id: 9, nome: "EM Renascer", alunos: 420, turmas: 14 }
+            { id: 1, nome: "EM ABRAO RASSI", alunos: 329, turmas: 12 },
+            { id: 2, nome: "EM ALONSO DIAS PINHEIRO", alunos: 220, turmas: 8 },
+            { id: 3, nome: "EM ANA DAS NEVES DE FREITAS", alunos: 204, turmas: 9 },
+            { id: 4, nome: "EM BENEDITO SOARES DE CASTRO", alunos: 190, turmas: 7 },
+            { id: 5, nome: "EM DE TEMPO INTEGRAL EUNICE WEAVER", alunos: 218, turmas: 8 },
+            { id: 6, nome: "EM DE TEMPO INTEGRAL JARDIM DAS AROEIRAS", alunos: 212, turmas: 8 },
+            { id: 7, nome: "EM DE TEMPO INTEGRAL JARDIM NOVO MUNDO", alunos: 266, turmas: 12 },
+            { id: 8, nome: "EM DE TEMPO INTEGRAL JUSCELINO KUBITSCHEK", alunos: 169, turmas: 7 },
+            { id: 9, nome: "EM DE TEMPO INTEGRAL PRESIDENTE DUTRA", alunos: 230, turmas: 8 },
+            { id: 10, nome: "EM DE TEMPO INTEGRAL RUI RODRIGUES", alunos: 127, turmas: 6 },
+            { id: 11, nome: "EM DE TEMPO INTEGRAL SETOR GRAJAU", alunos: 344, turmas: 12 },
+            { id: 12, nome: "EM DONA BELINHA", alunos: 246, turmas: 9 },
+            { id: 13, nome: "EM FRANCISCO BIBIANO DE CARVALHO", alunos: 225, turmas: 8 },
+            { id: 14, nome: "EM FREI DEMETRIO ZANQUETA", alunos: 275, turmas: 10 },
+            { id: 15, nome: "EM FREI NAZARENO CONFALONI", alunos: 323, turmas: 12 },
+            { id: 16, nome: "EM GEORGETA RIVALINO DUARTE", alunos: 195, turmas: 7 },
+            { id: 17, nome: "EM JARBAS JAYME", alunos: 199, turmas: 7 },
+            { id: 18, nome: "EM JOAQUIM CÂMARA FILHO", alunos: 330, turmas: 12 },
+            { id: 19, nome: "EM JOSÉ CARLOS PIMENTA", alunos: 140, turmas: 9 },
+            { id: 20, nome: "EM LIONS CLUBE DE GOIÂNIA TOCANTINS", alunos: 351, turmas: 13 },
+            { id: 21, nome: "EM MARECHAL RIBAS JÚNIOR", alunos: 341, turmas: 14 },
+            { id: 22, nome: "EM MARIA ARAÚJO DE FREITAS", alunos: 360, turmas: 15 },
+            { id: 23, nome: "EM MARIA GENOVEVA", alunos: 134, turmas: 5 },
+            { id: 24, nome: "EM MOISÉS SANTANA", alunos: 166, turmas: 6 },
+            { id: 25, nome: "EM MÔNICA DE CASTRO CARNEIRO", alunos: 281, turmas: 10 },
+            { id: 26, nome: "EM OSTERNO POTENCIANO E SILVA", alunos: 221, turmas: 8 },
+            { id: 27, nome: "EM PAULO TEIXEIRA DE MENDONCA", alunos: 177, turmas: 6 },
+            { id: 28, nome: "EM PROFR MARIA CAMARGO", alunos: 242, turmas: 10 },
+            { id: 29, nome: "EM PROFESSOR LOURENCO FERREIRA CAMPOS", alunos: 300, turmas: 11 },
+            { id: 30, nome: "EM PROFESSORA LOUISINHA", alunos: 348, turmas: 14 },
+            { id: 31, nome: "EM PROFESSORA MARIA NOSIDIA PALMEIRAS DAS NEVES", alunos: 287, turmas: 10 },
+            { id: 32, nome: "EM PROFESSORA SILENE DE ANDRADE", alunos: 170, turmas: 6 },
+            { id: 33, nome: "EM REGINA HELOU", alunos: 278, turmas: 10 },
+            { id: 34, nome: "EM SANTA RITA DE CÁSSIA (VALE DAS POMBAS)", alunos: 103, turmas: 8 },
+            { id: 35, nome: "EM SANTA TEREZINHA", alunos: 130, turmas: 7 },
+            { id: 36, nome: "EM SANTO ANTÔNIO", alunos: 246, turmas: 10 },
+            { id: 37, nome: "EM SEBASTIÃO ARANTES", alunos: 244, turmas: 10 },
+            { id: 38, nome: "EM STEPHÂNIA ALVES BISPO", alunos: 283, turmas: 10 },
+            { id: 39, nome: "EM TARGINO DE AGUIAR", alunos: 193, turmas: 7 },
+            { id: 40, nome: "EM VILA ROSA", alunos: 222, turmas: 8 },
+            { id: 41, nome: "EM ZEVERA ANDREA VECCI", alunos: 344, turmas: 13 },
+            { id: 42, nome: "EMTI PROFESSORA ARLEI GARCIA", alunos: 414, turmas: 16 },
+            { id: 43, nome: "EMTI ROTARY CLUB MDE GOIANIA", alunos: 180, turmas: 8 },
+            { id: 44, nome: "EMTI SANTA MARTA", alunos: 182, turmas: 9 },
+            { id: 45, nome: "ESCOLA JOÃO CRISOSTOMO ROSA", alunos: 135, turmas: 5 },
+            { id: 46, nome: "ESCOLA MUNICIPAL GO-04", alunos: 92, turmas: 5 }
         ];
 
         // --- BANCO DE DADOS CAPEX (BLOCO 3) ---
